added SENT feature