@@ -1,87 +1,0 @@
-<?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.NestedScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    >
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="@dimen/activity_margin"
-        >
-
-        <TextView
-            android:id="@+id/tv_sort_by"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:text="@string/dialog_title_sort_names_by"
-            android:paddingBottom="16dp"
-            android:textSize="18sp"
-            />
-<!-- TODO move import export to nav drawer, delete this -->
-        <RadioGroup
-            android:id="@+id/radio_sort_by"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_below="@id/tv_sort_by">
-
-            <RadioButton
-                android:id="@+id/radio_family"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/radio_family"
-                android:textSize="16sp"
-                />
-                <!--android:layout_margin="@dimen/radio_vertical_margin"-->
-
-            <RadioButton
-                android:id="@+id/radio_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/radio_name"
-                android:textSize="16sp"
-                />
-                <!--android:layout_margin="@dimen/radio_vertical_margin"-->
-        </RadioGroup>
-
-        <View
-            android:id="@+id/divider1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/divider"
-            android:layout_below="@id/radio_sort_by"/>
-
-        <TextView
-            android:id="@+id/export_db"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/export_db"
-            android:layout_below="@id/divider1"
-            android:layout_alignParentLeft="true"
-            android:paddingTop="16dp"
-            android:paddingBottom="16dp"
-            android:textSize="18sp"/>
-
-        <View
-            android:id="@+id/divider2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/divider"
-            android:layout_below="@id/export_db"/>
-
-        <TextView
-            android:id="@+id/import_db"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/import_db"
-            android:layout_below="@id/divider2"
-            android:layout_alignParentLeft="true"
-            android:paddingTop="16dp"
-            android:paddingBottom="16dp"
-            android:textSize="18sp"/>
-
-    </RelativeLayout>
-</android.support.v4.widget.NestedScrollView>
